# BioSeqZip

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/collapse/: collapse.cpp  functions.h  sample_tracker.h  settings.h
apps/expand/: expand.cpp  functions.h  input_format.h  settings.h
apps/expand/missing/: expand.cpp  functions.h  settings.h
cmake/: FetchContent.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: 01_collapsing_basics.sh  02_crossformat_collapsing.sh  03_multisample_collapsing.sh  04_star_alignment.sh  05_bwa_alignment.sh  06_bodymap_analysis.sh
include/: CMakeLists.txt  tag_file.h  tag_io.h  tag_read_write.h
include/bioseqzip/: buffer.h  collapser.h  expander.h  results_collapse.h  stats_collapse.h
include/bioseqzip/core/: details_reader.h  details_record.h  details_writer.h  library_layout.h  sequence_reader.h  sequence_record.h  sequence_writer.h
include/bioseqzip/cpputils/: cpputils.h
include/bioseqzip/cpputils/log/: logger.h  priority.h  sink_stdout.h
include/bioseqzip/cpputils/stats/: chronometer.h
tests/: CMakeLists.txt
tests/data/: details.tab  pe.1.fq  pe.1.tagq  pe.2.fq  pe.2.tagq  se.fq  se.tagq
tests/data/scripts/: details_entry.py  sequence_entry.py  simulate.py
tests/units/: CMakeLists.txt  main.cpp  test_bioseqzip.h  test_buffer.cpp
